# vdb37

./: .gitignore  README.md  py_impl.py  test.py
vdb37/: Cargo.toml  README.md  pyproject.toml
vdb37/python/tests/: test_all.py
vdb37/python/vdb37/: __init__.py  embeddings.py  kv.py  vdb37.pyi
vdb37/src/: disk.rs  embeddings.rs  kd_tree.rs  kv_vdb.rs  lib.rs  vdb.rs  vector.rs
