[package]
name = "vdb37"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vdb37"
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = { version = "1.3.3", features = ["i128"] }
pyo3 = { version = "0.22.0" }

[features]
default = []
